# child_wait_timeout

./: Cargo.toml  README.md  build.rs  run_benches.sh  run_tests.sh
benches/: wait_timeout_benchmark.rs
src/: error.rs  lib.rs
src/platform/: mod.rs  unix_pidfd.rs  unix_signal.rs  unix_thread.rs  wait_timeout_thread_untraced.c  windows.rs
tests/: test.rs
